Changelog
=========

1.7.dev0 - (unreleased)
-----------------------

1.6 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

1.5 - (2015-01-22)
------------------
* Bug fix: Fixed map.pt to work with Chameleon
  [voineali refs #22308]

1.4 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

1.3 - (2012-02-06)
------------------
* Bug fix: Fixed tests
  [voineali]
* Bug fix: Added dependencies to setup.py
  [voineali]

1.2 - (2011-11-18)
------------------
* Rerelease broken egg

1.1 - (2011-11-18)
------------------
* Cleanup: Fixed pylint, pyflakes warnings
  [voineali]

1.0 (2011-09-19)
----------------
* Initial release
  [moregale]
