@@ -5,6 +5,8 @@ try:
     json = simplejson
 except ImportError:
     import json
+
+import os
 import urllib
 import logging
 from StringIO import StringIO
@@ -19,8 +21,8 @@ from zope import i18n
 log = logging.getLogger(__name__)
 
 CONFIG = getConfiguration()
-tiles_url = getattr(CONFIG, 'environment', {}).get('AOA_MAP_TILES', '')
-aoa_url = getattr(CONFIG, 'environment', {}).get('AOA_PORTAL_URL', '')
+tiles_url = getattr(CONFIG, 'environment', {}).get('AOA_MAP_TILES', os.environ.get('AOA_MAP_TILES', ''))
+aoa_url = getattr(CONFIG, 'environment', {}).get('AOA_PORTAL_URL', os.environ.get('AOA_PORTAL_URL', ''))
 
 def _to_unicode(s):
     """ To unicode
